--- a/src/scss/_breadcrumbs.scss
+++ b/src/scss/_breadcrumbs.scss
@@ -1,6 +1,6 @@
 .breadcrumbs {
   flex: 1 1 100%;
-  color: var(--fg-700);
+  color: var(--fg-700); // Done
   text-align: center;
   line-height: 1.4;
 
