--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -89,13 +89,13 @@
       z-index: 1;
       display: grid;
       place-content: center;
-      color: var(--fg-800);
+      color: var(--fg-600); // Done
       font-family: var(--ff-heading);
       font-size: var(--fs-xl);
       line-height: 1;
       text-transform: uppercase;
+      text-shadow: 0 0 12px var(--card-bg-color), 0 0 6px var(--card-bg-color);
       font-weight: var(--font-weight-heading);
-      filter: drop-shadow(0 0 8px var(--card-bg-color)) drop-shadow(0 0 6px var(--card-bg-color)) drop-shadow(0 0 2px var(--card-bg-color));
     }
   }
 
@@ -167,11 +167,6 @@
     transition: filter var(--transition-duration);
   }
 
-  &__empty {
-   color: var(--fg-800); // TODO
-   text-align: center;
-  }
-
   &__header {
     display: flex;
     align-items: center;
@@ -223,7 +218,7 @@
     top: 0;
     right: 0;
     z-index: 2;
-    color: var(--fg-800);
+    color: var(--fg-600); // Done
     font-size: 14px;
     line-height: 1;
     text-align: center;
@@ -249,10 +244,10 @@
   }
 
   &__sticky-icon {
-    color: var(--fg-700); // TODO
+    color: var(--fg-600); // Done
     font-size: 75%;
     line-height: 1;
-    opacity: .375;
+    opacity: .3;
   }
 
   &__controls {
@@ -263,7 +258,7 @@
     justify-content: flex-end;
     gap: .625em;
     flex-shrink: 0;
-    color: var(--fg-700); // TODO
+    color: var(--fg-600); // Done
     line-height: 1;
     text-align: right;
     padding: .625em .625em 0 0;
@@ -271,7 +266,7 @@
     min-width: 28px;
 
     > :not(.popup-menu, :focus-visible) {
-      opacity: .375;
+      opacity: .3;
     }
 
     .popup-menu {
@@ -315,7 +310,7 @@
     text-align: center;
 
     .text-icon {
-      color: var(--fg-600); // Overrides hover // TODO
+      color: var(--fg-700); // Overrides hover // Done
     }
   }
 
@@ -354,7 +349,7 @@
   }
 
   &__by-author {
-    color: var(--fg-600);
+    color: var(--fg-600); // Done
     font-style: italic;
     letter-spacing: 0.03em;
 
@@ -368,7 +363,7 @@
   &__link-list {
     display: grid;
     gap: 3px;
-    color: var(--fg-500);
+    color: var(--fg-500); // Done
     font-size: var(--card-list-left-font-size, clamp(12px, 2.5cqw, 14px));
     line-height: 1.3;
 
@@ -399,13 +394,13 @@
 
     :is(i, .icon) {
       display: inline-block;
-      color: var(--fg-800);
+      color: var(--fg-800); // Done
       margin: 0 .35em 0 0;
     }
 
     .card__right {
       flex: 0 0 auto;
-      color: var(--fg-700);
+      color: var(--fg-800); // Done
       font-size: var(--card-list-right-font-size, clamp(12px, 2.35cqw, 13px));
       line-height: 1.5;
 
@@ -416,12 +411,12 @@
   }
 
   &__no-taxonomies {
-    color: var(--fg-600);
+    color: var(--fg-800); // Done
     font-family: var(--ff-base);
   }
 
   &__tag-list {
-    color: var(--fg-800); // Separators, tags have own color
+    color: var(--fg-700); // Separators, tags have own color // Done
     font-family: var(--ff-base);
     font-size: var(--card-tags-font-size, clamp(12px, 2.35cqw, 13px));
     line-height: 1.5;
@@ -466,7 +461,7 @@
   &__footer {
     display: flex;
     gap: 3px;
-    color: var(--fg-600);
+    color: var(--fg-700); // Done
     font-size: var(--card-footer-font-size, clamp(12px, 2.25cqw, 13px));
     line-height: 1;
     margin-top: var(--card-footer-margin-top, 1em);
@@ -476,6 +471,7 @@
     }
 
     .card-footer-icon {
+      color: var(--fg-800); // Done
       margin-right: .3em;
 
       &:not(:first-child) {
@@ -488,7 +484,7 @@
       flex: 0 0 auto;
       display: grid;
       place-content: center;
-      color: var(--fg-700);
+      color: var(--fg-700); // Done
       font-family: var(--ff-heading);
       font-weight: 600;
       padding: 0 .5rem;
@@ -692,16 +688,21 @@
     user-select: none;
     display: none;
     content-visibility: hidden;
-    color: var(--fg-900);
+    color: var(--fg-900); // Done
     transition: color var(--transition-duration);
 
     &:hover {
-      color: var(--fg-500);
+      color: var(--fg-600); // Done
     }
   }
 
   .bold-link {
+    color: var(--fg-600); // Done
     font-weight: var(--font-weight-medium);
+
+    &:hover {
+      color: var(--fg-400); // Done
+    }
   }
 
   a[data-lightbox] {
