--- a/src/scss/_profile.scss
+++ b/src/scss/_profile.scss
@@ -5,14 +5,6 @@
     }
   }
 
-  &__notice {
-    font-size: var(--fs-xs);
-
-    &--alert {
-      color: var(--red-400);
-    }
-  }
-
   &__description {
     font-size: var(--fs-xs);
   }
@@ -50,7 +42,7 @@
         top: 8px;
         right: 8px;
         z-index: 1;
-        color: var(--fg-700);
+        color: var(--fg-800); // Done
       }
     }
 
@@ -61,14 +53,14 @@
     &-label {
       display: flex;
       align-items: flex-end;
-      color: var(--fg-600);
+      color: var(--fg-500); // Done
       font-size: var(--fs-xs);
       font-weight: var(--font-weight-medium);
       padding: 0 0 2px;
     }
 
     &-note {
-      color: var(--fg-900);
+      color: var(--fg-900); // Done
       font-size: var(--fs-xxs);
       line-height: 1.3;
       padding: .5rem 2px 0;
@@ -116,7 +108,7 @@
       align-items: center;
       gap: .5rem;
       background: var(--button-secondary-background);
-      color: var(--fg-600);
+      color: var(--fg-600); // Done
       font-size: var(--fs-xs);
       font-weight: var(--font-weight-medium);
       text-align: center;
@@ -147,8 +139,8 @@
 
       &._connected {
         cursor: default;
-        background: var(--tooltip-background);
-        color: var(--tooltip-text);
+        background: var(--bg-50); // Done
+        color: var(--fg-inverted); // Done
         text-shadow: none;
         border: none;
       }
@@ -175,104 +167,8 @@
     }
   }
 
-  .comment {
-    background: var(--comment-background);
-    border-radius: 2px;
-    padding: .7rem .75rem .5rem;
-    margin-top: 2rem;
-
-    &:not(:last-child) {
-      margin-bottom: 2rem;
-    }
-
-    p {
-      &:not(:last-child) {
-        margin-bottom: .5rem;
-      }
-    }
-
-    &__header {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      line-height: 1;
-      margin-bottom: .5rem;
-
-      img {
-        border-radius: 2px;
-      }
-    }
-
-    &__author {
-      font-size: 13px;
-      line-height: 1.2;
-      padding-top: 1px;
-      margin-bottom: 2px;
-
-      > :is(span, a) {
-        font-weight: var(--font-weight-medium);
-      }
-    }
-
-    .fictioneer-comment__badge {
-      display: inline-flex;
-      align-items: center;
-      background: var(--badge-generic-background);
-      color: var(--badge-generic-color);
-      font: var(--font-weight-badge) 10px/1 var(--ff-base);
-      letter-spacing: -0.03em;
-      text-shadow: none;
-      border-radius: 2px;
-      padding: 0 4px;
-      margin-left: 4px;
-      height: 16px;
-      transform: translateY(-1px);
-
-      &.badge-override {
-        background: var(--badge-override-background);
-        color: var(--badge-override-color);
-      }
-
-      &.is-moderator {
-        background: var(--badge-moderator-background);
-        color: var(--badge-moderator-color);
-      }
-
-      &.is-admin {
-        background: var(--badge-admin-background);
-        color: var(--badge-admin-color);
-      }
-
-      &.is-author {
-        background: var(--badge-author-background);
-        color: var(--badge-author-color);
-      }
-
-      &.is-supporter {
-        background: var(--badge-supporter-background);
-        color: var(--badge-supporter-color);
-      }
-    }
-
-    &__date-and-link {
-      color: var(--fg-700);
-      font-size: 11px;
-      line-height: 1.3;
-
-      a {
-        font-weight: var(--font-weight-medium);
-      }
-    }
-
-    &__body {
-      color: var(--fg-600);
-      font-size: var(--fs-xs);
-      overflow-wrap: break-word;
-    }
-  }
-
   &__admin-notes {
-    color: var(--fg-600);
+    color: var(--fg-700); // Done
     font-size: var(--fs-xs);
     font-style: italic;
     line-height: 1.3;
@@ -283,7 +179,7 @@
 
     .warning,
     .warning > i {
-      color: var(--red-400);
+      color: var(--red-400); // Done
     }
 
     li {
@@ -295,7 +191,7 @@
       }
 
       i {
-        color: var(--fg-800);
+        color: var(--fg-900); // Done
         flex-shrink: 0;
         padding-left: 2px;
         width: 24px;
