--- a/src/scss/common/_formatting.scss
+++ b/src/scss/common/_formatting.scss
@@ -223,7 +223,7 @@ p a,
 }
 
 .content-section {
-  :where(.list, :is(ul, ol):not(.chapter-group__list, .grid-columns, .card__link-list, .profile__admin-notes)) {
+  :where(.list, .block-list) {
     list-style: initial;
     padding-left: 1.75rem;
     margin: 1.5rem 0 0;
@@ -243,21 +243,21 @@ p a,
     }
   }
 
-  :where(.list, ul:not(.chapter-group__list, .grid-columns, .card__link-list, .profile__admin-notes)) {
+  :where(.list, ul.block-list) {
     li::marker {
       color: var(--list-marker-color, var(--fg-700)); // Done
     }
   }
 
-  :where(ul, .list) > li > ul:not(.chapter-group__list, .grid-columns, .card__link-list, .profile__admin-notes) {
+  :where(ul, .list) > li > ul.block-list {
     list-style: circle;
   }
 
-  :where(ul, .list) > li > ul > li > ul:not(.chapter-group__list, .grid-columns, .card__link-list, .profile__admin-notes) {
+  :where(ul, .list) > li > ul > li > ul.block-list {
     list-style: square;
   }
 
-  :where(.list, ol:not(.chapter-group__list, .grid-columns, .card__link-list, .profile__admin-notes)) {
+  :where(.list, ol.block-list) {
     list-style: ordered-list;
   }
 }
